fix: hide overflows

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h5 {
   background-color: #F0F0F0;
   border-radius: 0.75rem;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .square {
